tests/snapshots/run_wpt_conformance__onnx_pad_int32_2D_tensor_options_value.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad int32 2D tensor options.value",
    "onnx",
    "PASS",
)
