tests/snapshots/run_wpt_conformance__onnx_padding_float32_0D_constant_tensor_with_empty_paddings_should_be_no-op.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "padding float32 0D constant tensor with empty paddings should be no-op",
    "onnx",
    "PASS",
)
