tests/snapshots/run_wpt_conformance__onnx_per-channel_quantized_gemm_with_non-zero_quantized_dimension_of_the_filter.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "qdq_subgraph.https.any.js",
    "per-channel quantized gemm with non-zero quantized dimension of the filter",
    "onnx",
    "PASS",
)
