tests/snapshots/run_wpt_conformance__onnx_per-tensor_dequantizeLinear_for_int4_4D_tensor_with_float16_4D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "per-tensor dequantizeLinear for int4 4D tensor with float16 4D scale",
    "onnx",
    "PASS",
)
