tests/snapshots/run_wpt_conformance__onnx_per-tensor_dequantizeLinear_for_int4_4D_tensor_with_float32_4D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "per-tensor dequantizeLinear for int4 4D tensor with float32 4D scale",
    "onnx",
    "PASS",
)
